<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/ivItemPokemon"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:layout_margin="@dimen/_16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/txt_imageview"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvItemNamePokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:padding="@dimen/_4dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvIdItemPokemon"
        app:layout_constraintStart_toEndOf="@+id/ivItemPokemon"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/txt_name" />

    <TextView
        android:id="@+id/tvIdItemPokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:padding="@dimen/_4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivItemPokemon"
        app:layout_constraintTop_toBottomOf="@+id/tvItemNamePokemon"
        android:text="@string/txt_id_pokemon" />

    <LinearLayout
        android:id="@+id/llContainerItemPokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>